refactor: adjust pug lint setting

--- a/src/app/views/pages/home/index.pug
+++ b/src/app/views/pages/home/index.pug
@@ -5,4 +5,4 @@ html
     h1 #{message}
     p hello #{name}
     div
-      img(src='/images/image.png', alt='')
+      img(src="/images/image.png", alt="")
