feat: define common navigation

--- a/src/app/views/pages/home/index.pug
+++ b/src/app/views/pages/home/index.pug
@@ -2,6 +2,7 @@ html
   head
     title express site
   body
+    include ../../components/menu/index
     h1 #{message}
     p hello #{name}
     div
