feat: define common navigation

--- a/src/app/views/pages/home/index.pug
+++ b/src/app/views/pages/home/index.pug
@@ -2,7 +2,7 @@ html
   head
     title express site
   body
-    include ../../components/menu/index
+    include ../../components/menu/index.pug
     h1 #{message}
     p hello #{name}
     div
